Transfer to LMC, fix responsive visibility

--- a/less/responsive-visibility.less
+++ b/less/responsive-visibility.less
@@ -1,64 +1,64 @@
-.visible-palm {
+.visible--palm {
     display: block;
 }
-.visible-lap {
+.visible--lap {
     display: none;
 }
-.visible-desk {
+.visible--desk {
     display: none;
 }
 
-.hidden-palm {
+.hidden--palm {
     display: none;
 }
-.hidden-lap {
+.hidden--lap {
     display: block;
 }
-.hidden-desk {
+.hidden--desk {
     display: block;
 }
 
 
 @media only screen and (min-width: @screen-lap) {
-    .visible-palm {
+    .visible--palm {
         display: none;
     }
-    .visible-lap {
+    .visible--lap {
         display: block;
     }
-    .visible-desk {
+    .visible--desk {
         display: none;
     }
 
-    .hidden-palm {
+    .hidden--palm {
         display: block;
     }
-    .hidden-lap {
+    .hidden--lap {
         display: none;
     }
-    .hidden-desk {
+    .hidden--desk {
         display: block;
     }
 }
 
 @media only screen and (min-width: @screen-desk) {
-    .visible-palm {
+    .visible--palm {
         display: none;
     }
-    .visible-lap {
+    .visible--lap {
         display: none;
     }
-    .visible-desk {
+    .visible--desk {
         display: block;
     }
 
-    .hidden-palm {
+    .hidden--palm {
         display: block;
     }
-    .hidden-lap {
+    .hidden--lap {
         display: block;
     }
-    .hidden-desk {
+    .hidden--desk {
         display: none;
     }
 }
